# tscut

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
dependencies/ffmpeg/: CMakeLists.txt
sources/: connection.cpp  connection.hpp  connection_manager.cpp  connection_manager.hpp  cut_video_request.hpp  ffmpeg_guards.cpp  ffmpeg_guards.hpp  ffmpeg_headers.hpp  header.hpp  logger.hpp  main.cpp  mime_types.cpp  path_parser.cpp  path_parser.hpp  reply.cpp  reply.hpp  request.hpp  request_handler.cpp  request_handler.hpp  request_parser.cpp  request_parser.hpp  server.cpp  server.hpp  singleton.hpp  video_processing.cpp  video_processing.hpp
tests/: CMakeLists.txt  main.cpp  test.cpp  test_path_parser.cpp
